# React-Native-Anwar

./: .gitignore  Kuesioner Perbedaan Waktu Penggunaan Media Sosial Mahasiswa Sains Data Berdasarkan Angkatan.xlsx  README.md
Backup Data/: 247411027_ANWAR ROHMADI (1).ipynb  247411027_ANWAR ROHMADI.ipynb  247411027_ANWAR_ROHMADI_(1).ipynb  Kuesioner Perbedaan Waktu Penggunaan Media Sosial Mahasiswa Sains Data Berdasarkan Angkatan  (Jawaban) - Form Responses 1.csv  PROJEK_UAS_ANALISIS_MULTIVARIATE__.ipynb  Proyek_Analisis_Data.ipynb  Untitled158.ipynb  notebook (1).ipynb  notebook.ipynb  tolong jelaskan ini.md
Market mini/: AGENTS.md  prompt 2.md
e-kampus-mini-app/: App.tsx  dom.html  dump-dom.js  package-lock.json  package.json  test-click.js  tsconfig.json
nanotabpfn-plus/: LICENSE  README.md  benchmark.py  inference.py  modal_output.txt  modal_output_10k.txt  modal_output_mhc.txt  modal_train.py  model.py  nanotabpfn_plus_from_modal.pt  prior.py  requirements.txt  train.py
praktikum-p2/: App.js  README.md  app.json  package-lock.json  package.json
praktikum-p3/: App.js  README.md  app.json  package-lock.json  package.json
praktikum-p4/: .gitignore  README.md  app.json  package-lock.json  package.json
praktikum-p5/: .gitignore  App.js  Modul_Praktikum_P5_Form_Validasi.md  README.md  app.json  package-lock.json  package.json  skills-lock.json
praktikum-p6/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
rust-waweb/: Cargo.toml  Dockerfile  deploy_gcp.sh  fly.toml  main.go  modal_app.py
rust-waweb/src/: main.rs
(+109 files in other folders)
